--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=xpertcash
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xpertCash_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+logging.level.root=ERROR
+server.port=9000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## Integration of Swagger ##
+# Specify the path of the OpenAPI documentation
+#springdoc.api-docs.path=/api-docs
+
+# Specify the path of the Swagger UI
+#springdoc.swagger-ui.path=/swagger-ui.html
+
+# Enable or disable Swagger UI
+#springdoc.swagger-ui.enabled=true
