--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,24 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 logging.level.root=ERROR
-server.port=9000
+server.port=8080
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Integration de mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sydiakaridia38@gmail.com
+spring.mail.password=njvpaoduaqbmkqmb
+#spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.mail=DEBUG
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
 
 ## Integration of Swagger ##
 # Specify the path of the OpenAPI documentation
