--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=xpertcash
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xpertCash_db
 spring.datasource.username=root
 spring.datasource.password=
@@ -25,6 +25,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+# @JsonIgnoreProperties(ignoreUnknown = false)
+spring.jackson.deserialization.fail-on-unknown-properties=true
 
 
 ## Integration of Swagger ##
