Creation CRUD endpoint de produit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,11 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # @JsonIgnoreProperties(ignoreUnknown = false)
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+# Activez le logging en mode DEBUG pour obtenir plus d?informations sur le filtrage appliqué par Spring Security.
+
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.web=DEBUG
+
 
 ## Integration of Swagger ##
 # Specify the path of the OpenAPI documentation
