--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,14 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+#Token Key
+jwt.secret=SicCHYqocXe+f8cq1k0WT+vWUhfVEO2VV2G4Wvc2Drs=
+
+
 # @JsonIgnoreProperties(ignoreUnknown = false)
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
-# Activez le logging en mode DEBUG pour obtenir plus d?informations sur le filtrage appliqué par Spring Security.
+# Activez le logging en mode DEBUG pour obtenir plus d?informations sur le filtrage appliquï¿½ par Spring Security.
 
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.web=DEBUG
