Pdf generer auto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,13 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Enable or disable Swagger UI
 springdoc.swagger-ui.enabled=true
 
+# Augmentez les limites
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=true
+
+# Activez les logs détaillés
+logging.level.org.springframework.web=DEBUG
+logging.level.org.apache.tomcat=DEBUG
+logging.level.com.xpertcash=TRACE
