--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=xpertcash
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3308/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -52,7 +52,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.resolve-lazily=true
 
-# Activez les logs détaillés
+# Activez les logs dï¿½taillï¿½s
 logging.level.org.springframework.web=DEBUG
 logging.level.org.apache.tomcat=DEBUG
 logging.level.com.xpertcash=TRACE
