--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,18 @@
 			<version>3.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-messaging</artifactId>
+			<version>6.5.1</version>
+		</dependency>
+
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
