All gestion de webSocket lors que etat de facture est approbation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,10 @@ spring.servlet.multipart.resolve-lazily=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.apache.tomcat=DEBUG
 logging.level.com.xpertcash=TRACE
+logging.level.org.springframework.messaging.simp: DEBUG
+
+
+logging:
+level:
+org.springframework.messaging.simp: DEBUG
+org.springframework.web.socket.sockjs: DEBUG
