Update User info

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,10 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sydiakaridia38@gmail.com
 spring.mail.password=njvpaoduaqbmkqmb
+
+# spring.mail.username=wronguser
+# spring.mail.password=wrongpass
+
 #spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
