Cache gestion only produit

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
 
 	<!-- end -->
 
+		<!-- Cache Dependencies -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-cache</artifactId>
+	</dependency>
+
 	</dependencies>
 
 	<build>
