--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -73,3 +73,8 @@ logging:
 level:
 org.springframework.messaging.simp: DEBUG
 org.springframework.web.socket.sockjs: DEBUG
+
+
+# Cache Configuration - Simple en mémoire
+spring.cache.type=simple
+spring.cache.simple.cache-names=produits-boutique,produits-entreprise,stock-historique,stock-entreprise
