Update paiement Module and activation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -77,4 +77,4 @@ org.springframework.web.socket.sockjs: DEBUG
 
 # Cache Configuration - Simple en mémoire
 spring.cache.type=simple
-spring.cache.simple.cache-names=produits-boutique,produits-entreprise,stock-historique,stock-entreprise
+spring.cache.simple.cache-names=produits-boutique,produits-entreprise,stock-historique,stock-entreprise,user-info
