--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=xpertcash
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.158}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.268}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 
 # spring.datasource.username=root
@@ -20,8 +20,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Integration de mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sydiakaridia38@gmail.com
-spring.mail.password=njvpaoduaqbmkqmb
+spring.mail.username=xpertproinformatique@gmail.com
+spring.mail.password=poorxnjxzbupznxu
 
 # spring.mail.username=wronguser
 # spring.mail.password=wrongpass
