--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- WebSocket désactivé -->
+		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		-->
 
 		<dependency>
     <groupId>io.jsonwebtoken</groupId>
@@ -125,11 +128,14 @@
 			<version>3.3.2</version>
 		</dependency>
 
+		<!-- WebSocket désactivé - spring-security-messaging utilisé pour websocket -->
+		<!--
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-messaging</artifactId>
 			<version>6.5.1</version>
 		</dependency>
+		-->
 
 
 	<dependency>
