--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,17 +18,18 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Integration de mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=xpertproinformatique@gmail.com
-spring.mail.password=poorxnjxzbupznxu
+spring.mail.host=mail.tchakeda.com
+spring.mail.port=465
+spring.mail.username=contact@tchakeda.com
+spring.mail.password=IvrQ=RoYv}t&cRlj
 
 # spring.mail.username=wronguser
 # spring.mail.password=wrongpass
 
 #spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.springframework.mail=DEBUG
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
