--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,10 +18,10 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Integration de mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=xpertproinformatique@gmail.com
-spring.mail.password=poorxnjxzbupznxu
+spring.mail.host=mail.tchakeda.com
+spring.mail.port=465
+spring.mail.username=contact@tchakeda.com
+spring.mail.password=IvrQ=RoYv}t&cRlj
 #spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
