--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=xpertcash
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.868}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 
@@ -17,11 +17,17 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Integration de mail
+# Integration de mail (contact@tchakeda.com)
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
-spring.mail.username=contact@tchakeda.com
-spring.mail.password=IvrQ=RoYv}t&cRlj
+spring.mail.username=tchakeda@tchakeda.com
+spring.mail.password=6XxjZxh$s@C4G_w2
+
+# Integration de mail pour factures (facture@tchakeda.com)
+spring.mail.facture.host=mail.tchakeda.com
+spring.mail.facture.port=465
+spring.mail.facture.username=facture@tchakeda.com
+spring.mail.facture.password=QO*f_I?7NFdenMB.
 
 # spring.mail.username=wronguser
 # spring.mail.password=wrongpass
