--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,11 +17,20 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Integration de mail
+# Integration de mail (contact@tchakeda.com)
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
-spring.mail.username=contact@tchakeda.com
-spring.mail.password=IvrQ=RoYv}t&cRlj
+spring.mail.username=tchakeda@tchakeda.com
+spring.mail.password=6XxjZxh$s@C4G_w2
+
+# Integration de mail pour factures (facture@tchakeda.com)
+spring.mail.facture.host=mail.tchakeda.com
+spring.mail.facture.port=465
+spring.mail.facture.username=facture@tchakeda.com
+spring.mail.facture.password=QO*f_I?7NFdenMB.
+
+
+
 #spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
