--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -33,7 +33,8 @@ spring.mail.facture.password=QO*f_I?7NFdenMB.
 
 #spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.springframework.mail=DEBUG
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
