--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,9 +37,14 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.springframework.mail=DEBUG
+logging.level.jakarta.mail=DEBUG
+logging.level.com.xpertcash.service.MailService=DEBUG
+logging.file.path=./logs
+logging.file.name=xpertcash
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.trust=mail.tchakeda.com
 
 spring.web.resources.static-locations=file:src/main/resources/static/
 
