--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,13 +17,13 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Integration de mail (contact@tchakeda.com)
+# (contact@tchakeda.com)
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
 spring.mail.username=tchakeda@tchakeda.com
-spring.mail.password=6XxjZxh$s@C4G_w2
+spring.mail.password=Xpertpro2026
 
-# Integration de mail pour factures (facture@tchakeda.com)
+# pour factures (facture@tchakeda.com)
 spring.mail.facture.host=mail.tchakeda.com
 spring.mail.facture.port=465
 spring.mail.facture.username=facture@tchakeda.com
