--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,8 +2,6 @@ spring.application.name=xpertcash
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 
-# spring.datasource.username=root
-# spring.datasource.password=
 
 spring.datasource.username=xpert_db
 spring.datasource.password=Xpert@2025
@@ -17,13 +15,13 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Integration de mail (contact@tchakeda.com)
+# (contact@tchakeda.com)
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
 spring.mail.username=tchakeda@tchakeda.com
-spring.mail.password=6XxjZxh$s@C4G_w2
+spring.mail.password=Xpertpro2026
 
-# Integration de mail pour factures (facture@tchakeda.com)
+#  pour factures (facture@tchakeda.com)
 spring.mail.facture.host=mail.tchakeda.com
 spring.mail.facture.port=465
 spring.mail.facture.username=facture@tchakeda.com
