--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -56,16 +56,16 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 
 ## Integration of Swagger ##
-# Specify the path of the OpenAPI documentation
+# path of the OpenAPI documentation
 springdoc.api-docs.path=/api-docs
 
-# Specify the path of the Swagger UI
+#  path of the Swagger UI 
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # Enable or disable Swagger UI
 springdoc.swagger-ui.enabled=false
 
-# Augmentez les limites
+# Augmentation des limites
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.enabled=true
