Review mail sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # profil actif par défaut
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # Configuration des logs
 logging.file.path=./logs
