--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,17 +17,11 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# (contact@tchakeda.com)
+# Configuration email unique 
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
 spring.mail.username=tchakeda@tchakeda.com
 spring.mail.password=Xpertpro2026
-
-# pour factures (facture@tchakeda.com)
-spring.mail.facture.host=mail.tchakeda.com
-spring.mail.facture.port=465
-spring.mail.facture.username=facture@tchakeda.com
-spring.mail.facture.password=QO*f_I?7NFdenMB.
 
 # spring.mail.username=wronguser
 # spring.mail.password=wrongpass
