--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,17 +15,11 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# (contact@tchakeda.com)
+# Configuration email unique 
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
 spring.mail.username=tchakeda@tchakeda.com
 spring.mail.password=Xpertpro2026
-
-#  pour factures (facture@tchakeda.com)
-spring.mail.facture.host=mail.tchakeda.com
-spring.mail.facture.port=465
-spring.mail.facture.username=facture@tchakeda.com
-spring.mail.facture.password=QO*f_I?7NFdenMB.
 
 
 
@@ -38,9 +32,9 @@ logging.level.jakarta.mail=DEBUG
 logging.level.com.xpertcash.service.MailService=DEBUG
 logging.file.path=./logs
 logging.file.name=xpertcash
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
 spring.mail.properties.mail.smtp.ssl.trust=mail.tchakeda.com
 
 spring.web.resources.static-locations=file:src/main/resources/static/
