--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,8 +20,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Configuration email unique 
 spring.mail.host=mail.tchakeda.com
 spring.mail.port=465
-spring.mail.username=tchakeda@tchakeda.com
-spring.mail.password=Xpertpro2026
+spring.mail.username=contact@tchakeda.com
+spring.mail.password=IvrQ=RoYv}t&cRlj
 
 # spring.mail.username=wronguser
 # spring.mail.password=wrongpass
