--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-# profil actif par défaut
-spring.profiles.active=prod
+spring.profiles.active=dev
 
-# Configuration des logs
 logging.file.path=./logs
 logging.file.name=xpertcash
