Pagination depuis DB

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -62,8 +62,9 @@ spring.servlet.multipart.resolve-lazily=true
 
 
 # ============================================
-# POOL DE CONNEXIONS HIKARICP (CRITIQUE pour 1000 utilisateurs)
-# Configuration optimisée pour supporter 100 entreprises / 1000 utilisateurs simultanés
+# POOL DE CONNEXIONS HIKARICP (SaaS multi-tenant / multi-thread)
+# 100 entreprises / ~1000 requêtes concurrentes ; 1 connexion par requête active DB
+spring.datasource.hikari.pool-name=XpertCashBack-HikariPool
 spring.datasource.hikari.maximum-pool-size=100
 spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.connection-timeout=30000
