--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- DevTools désactivé -->
+		<!--
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		-->
+
+
 		<!-- WebSocket désactivé -->
 		<!--
 		<dependency>
