--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=xpertcash
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.568}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.1668}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/xpertCash_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 
 
@@ -122,8 +122,8 @@ spring.servlet.multipart.resolve-lazily=true
 
 
 # ============================================
-# POOL DE CONNEXIONS HIKARICP (CRITIQUE pour 1000 utilisateurs)
-# Configuration optimisée pour supporter 100 entreprises / 1000 utilisateurs simultanés
+# POOL DE CONNEXIONS HIKARICP (SaaS multi-tenant / multi-thread)
+spring.datasource.hikari.pool-name=XpertCashBack-HikariPool
 spring.datasource.hikari.maximum-pool-size=100
 spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.connection-timeout=30000
