--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.profiles.active=dev
 
 logging.file.path=./logs
 logging.file.name=xpertcash
+
+# ========== SaaS / multi-tenant & multi-thread ==========
+# Tomcat : threads de requêtes (chaque requête = 1 thread, isolation par tenant via JWT/HttpServletRequest)
+server.tomcat.threads.max=200
+server.tomcat.threads.min-spare=25
+server.tomcat.accept-count=100
+server.tomcat.max-connections=10000
